turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:3: error: not found: value pi
	val angle:Double = 4*pi/7
                             ^