turtleart.lessons.turtleart.Main.Polygon7.scala.code
override def run() {
	val angle:Double = 4*pi/7
	for ( i<- 0 to 6 ) {
		avance(80)
		droite(angle)
	}
}
